# ztt

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.zig  build.zig.zon  cliff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
scripts/: add.sh  hash.sh  install.sh  release.sh  remove.sh  test.sh  uninstall.sh
src/: lib.rs  main.zig
tests/: test_main.zig
