[package]
name = "ztt"
version = "{{"
description = "..."
authors = ["xTekC"]
repository = "https://github.com/xTekC/ztt"
readme = "README.md"
homepage = "https://github.com/xTekC/ztt"
documentation = "https://github.com/xTekC/ztt/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "ztt -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

# [dependencies.cursive]
# version = "0.20.0"
# default-features = false
# features = ["crossterm-backend"]

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
